# fordocs

./: .gitignore  .pre-commit-config.yaml  README.md  Readme.txt  class_template.html  doc_generator.py  file_template.html  fordocs.py  fortran_parser.py  index_template.html  makeCAMB.py  makeCosmomc.py  makeForUtils.py  module_template.html  pyproject.toml  requirements.txt  simple_tree_test.html
assets/css/: styles.css
lib/: .gitignore  dbmaker.py  docmaker.py  fshandler.py  parsers.py  source_model.py  util.py
lib/templates/: _arguments.html  _classes.html  _dependencies.html  _functions.html  _generics.html  _interfaces.html  _modules.html  _properties.html  _subroutines.html  _trees_backup.html  base.html  class.html  class_index.html  file.html  index.html  module.html  program.html
lib/templates/assets/css/: styles.css
